Added Correct Paths And Src Folder
