# swagger_output.json
@@ -5,7 +5,6 @@
     "title": "MY REST API",
     "description": "The Documentation For My Rest API"
   },
-  "host": "localhost:5000",
   "basePath": "/",
   "tags": [
     {
@@ -22,6 +21,7 @@
     }
   ],
   "schemes": [
+    "https",
     "http"
   ],
   "securityDefinitions": {
@@ -447,9 +447,7 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/signup/": {
+      },
       "get": {
         "tags": [
           "User"
